@@ -156,6 +156,7 @@ class LogPage {
 	 * @static
 	 */
 	function actionText( $type, $action, $title = NULL, $skin = NULL, $params = array(), $filterWikilinks=false ) {
+		global $wgLang;
 		static $actions = array(
 			'block/block'       => 'blocklogentry',
 			'block/unblock'     => 'unblocklogentry',
@@ -193,6 +194,9 @@ class LogPage {
 					$rv = wfMsg( $actions[$key], $titleLink );
 				} else {
 					array_unshift( $params, $titleLink );
+					if ( $key == 'block/block' ) {
+						$params[1] = $wgLang->translateBlockExpiry($params[1]);
+					}
 					$rv = wfMsgReal( $actions[$key], $params, true, false );
 				}
 			}
